--- a/Semana 3 - Aprendiendo CSS/Ejercicio vacunación/vacunación.html
+++ b/Semana 3 - Aprendiendo CSS/Ejercicio vacunación/vacunación.html
@@ -62,7 +62,7 @@
             <option value="Astra">AstraZeneca</option>
             <option value="patria">Patria</option>
             </select>
-        <input type="button" value="Submit" class="butom"> <br>
+        <input type="button" value="Submit" class="butom"> <br> <br>
         </div>
     </section>
 </body>
