--- a/Semana 2 - Aprendiendo HTML/Ejercicio Abogabot HTML/Práctica HTML Abogabot.html
+++ b/Semana 2 - Aprendiendo HTML/Ejercicio Abogabot HTML/Práctica HTML Abogabot.html
@@ -10,7 +10,7 @@
 <body>
 <section >
     <header class="fondoColor">
-        <img src="Logo para abogados.png" alt="Logo">
+        <img src="Logo para abogados.png" alt="Logo" width="40%" height= "4image.png0%">
     </header>
     <!--------------------------------------------------------------------------------------->
     <hr>
